src/yldprolog/prologParser.py
# Generated from prolog.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class prologParser ( Parser ):

    grammarFileName = "prolog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "':-'", "'\\+'", "','", "'->'", 
                     "';'", "'('", "')'", "'/'", "'|'", "'true'", "'fail'", 
                     "'!'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TRUE", "FAIL", 
                      "CUT", "VARIABLE", "ATOM", "NUMERAL", "UNOP", "BINOP", 
                      "STRING", "LBRACK", "RBRACK", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_clauseordirective = 1
    RULE_clause = 2
    RULE_directive = 3
    RULE_predicatelist = 4
    RULE_predicateexpression = 5
    RULE_simplepredicate = 6
    RULE_termpredicate = 7
    RULE_termlist = 8
    RULE_term = 9
    RULE_atom = 10
    RULE_functor = 11

    ruleNames =  [ "program", "clauseordirective", "clause", "directive", 
                   "predicatelist", "predicateexpression", "simplepredicate", 
                   "termpredicate", "termlist", "term", "atom", "functor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    TRUE=11
    FAIL=12
    CUT=13
    VARIABLE=14
    ATOM=15
    NUMERAL=16
    UNOP=17
    BINOP=18
    STRING=19
    LBRACK=20
    RBRACK=21
    WS=22
    COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clauseordirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(prologParser.ClauseordirectiveContext)
            else:
                return self.getTypedRuleContext(prologParser.ClauseordirectiveContext,i)


        def getRuleIndex(self):
            return prologParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = prologParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << prologParser.T__1) | (1 << prologParser.T__6) | (1 << prologParser.TRUE) | (1 << prologParser.FAIL) | (1 << prologParser.CUT) | (1 << prologParser.VARIABLE) | (1 << prologParser.ATOM) | (1 << prologParser.NUMERAL) | (1 << prologParser.UNOP) | (1 << prologParser.BINOP) | (1 << prologParser.STRING) | (1 << prologParser.LBRACK))) != 0):
                self.state = 24
                self.clauseordirective()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseordirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clause(self):
            return self.getTypedRuleContext(prologParser.ClauseContext,0)


        def directive(self):
            return self.getTypedRuleContext(prologParser.DirectiveContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_clauseordirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClauseordirective" ):
                listener.enterClauseordirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClauseordirective" ):
                listener.exitClauseordirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClauseordirective" ):
                return visitor.visitClauseordirective(self)
            else:
                return visitor.visitChildren(self)




    def clauseordirective(self):

        localctx = prologParser.ClauseordirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_clauseordirective)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [prologParser.T__6, prologParser.TRUE, prologParser.FAIL, prologParser.CUT, prologParser.VARIABLE, prologParser.ATOM, prologParser.NUMERAL, prologParser.UNOP, prologParser.BINOP, prologParser.STRING, prologParser.LBRACK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.clause()
                pass
            elif token in [prologParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.directive()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simplepredicate(self):
            return self.getTypedRuleContext(prologParser.SimplepredicateContext,0)


        def predicateexpression(self):
            return self.getTypedRuleContext(prologParser.PredicateexpressionContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClause" ):
                listener.enterClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClause" ):
                listener.exitClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClause" ):
                return visitor.visitClause(self)
            else:
                return visitor.visitChildren(self)




    def clause(self):

        localctx = prologParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_clause)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.simplepredicate()
                self.state = 35
                self.match(prologParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.simplepredicate()
                self.state = 38
                self.match(prologParser.T__1)
                self.state = 39
                self.predicateexpression(0)
                self.state = 40
                self.match(prologParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simplepredicate(self):
            return self.getTypedRuleContext(prologParser.SimplepredicateContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirective" ):
                return visitor.visitDirective(self)
            else:
                return visitor.visitChildren(self)




    def directive(self):

        localctx = prologParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_directive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(prologParser.T__1)
            self.state = 45
            self.simplepredicate()
            self.state = 46
            self.match(prologParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicatelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicateexpression(self):
            return self.getTypedRuleContext(prologParser.PredicateexpressionContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_predicatelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicatelist" ):
                listener.enterPredicatelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicatelist" ):
                listener.exitPredicatelist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicatelist" ):
                return visitor.visitPredicatelist(self)
            else:
                return visitor.visitChildren(self)




    def predicatelist(self):

        localctx = prologParser.PredicatelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predicatelist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.predicateexpression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateexpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def simplepredicate(self):
            return self.getTypedRuleContext(prologParser.SimplepredicateContext,0)


        def predicateexpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(prologParser.PredicateexpressionContext)
            else:
                return self.getTypedRuleContext(prologParser.PredicateexpressionContext,i)


        def getRuleIndex(self):
            return prologParser.RULE_predicateexpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateexpression" ):
                listener.enterPredicateexpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateexpression" ):
                listener.exitPredicateexpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicateexpression" ):
                return visitor.visitPredicateexpression(self)
            else:
                return visitor.visitChildren(self)



    def predicateexpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = prologParser.PredicateexpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_predicateexpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 51
                self.simplepredicate()
                pass

            elif la_ == 2:
                self.state = 52
                localctx.op = self.match(prologParser.T__2)
                self.state = 53
                self.predicateexpression(5)
                pass

            elif la_ == 3:
                self.state = 54
                self.match(prologParser.T__6)
                self.state = 55
                self.predicateexpression(0)
                self.state = 56
                self.match(prologParser.T__7)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 69
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = prologParser.PredicateexpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_predicateexpression)
                        self.state = 60
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 61
                        localctx.op = self.match(prologParser.T__3)
                        self.state = 62
                        self.predicateexpression(4)
                        pass

                    elif la_ == 2:
                        localctx = prologParser.PredicateexpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_predicateexpression)
                        self.state = 63
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 64
                        localctx.op = self.match(prologParser.T__4)
                        self.state = 65
                        self.predicateexpression(3)
                        pass

                    elif la_ == 3:
                        localctx = prologParser.PredicateexpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_predicateexpression)
                        self.state = 66
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 67
                        localctx.op = self.match(prologParser.T__5)
                        self.state = 68
                        self.predicateexpression(2)
                        pass

             
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SimplepredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(prologParser.TRUE, 0)

        def FAIL(self):
            return self.getToken(prologParser.FAIL, 0)

        def CUT(self):
            return self.getToken(prologParser.CUT, 0)

        def termpredicate(self):
            return self.getTypedRuleContext(prologParser.TermpredicateContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_simplepredicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimplepredicate" ):
                listener.enterSimplepredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimplepredicate" ):
                listener.exitSimplepredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimplepredicate" ):
                return visitor.visitSimplepredicate(self)
            else:
                return visitor.visitChildren(self)




    def simplepredicate(self):

        localctx = prologParser.SimplepredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simplepredicate)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [prologParser.TRUE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(prologParser.TRUE)
                pass
            elif token in [prologParser.FAIL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(prologParser.FAIL)
                pass
            elif token in [prologParser.CUT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.match(prologParser.CUT)
                pass
            elif token in [prologParser.T__6, prologParser.VARIABLE, prologParser.ATOM, prologParser.NUMERAL, prologParser.UNOP, prologParser.BINOP, prologParser.STRING, prologParser.LBRACK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.termpredicate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermpredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(prologParser.TermContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_termpredicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermpredicate" ):
                listener.enterTermpredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermpredicate" ):
                listener.exitTermpredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermpredicate" ):
                return visitor.visitTermpredicate(self)
            else:
                return visitor.visitChildren(self)




    def termpredicate(self):

        localctx = prologParser.TermpredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_termpredicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.term(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(prologParser.TermContext)
            else:
                return self.getTypedRuleContext(prologParser.TermContext,i)


        def getRuleIndex(self):
            return prologParser.RULE_termlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermlist" ):
                listener.enterTermlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermlist" ):
                listener.exitTermlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermlist" ):
                return visitor.visitTermlist(self)
            else:
                return visitor.visitChildren(self)




    def termlist(self):

        localctx = prologParser.TermlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_termlist)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [prologParser.T__7, prologParser.T__9, prologParser.RBRACK]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [prologParser.T__6, prologParser.VARIABLE, prologParser.ATOM, prologParser.NUMERAL, prologParser.UNOP, prologParser.BINOP, prologParser.STRING, prologParser.LBRACK]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.term(0)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==prologParser.T__3:
                    self.state = 84
                    self.match(prologParser.T__3)
                    self.state = 85
                    self.term(0)
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(prologParser.AtomContext,0)


        def functor(self):
            return self.getTypedRuleContext(prologParser.FunctorContext,0)


        def ATOM(self):
            return self.getToken(prologParser.ATOM, 0)

        def NUMERAL(self):
            return self.getToken(prologParser.NUMERAL, 0)

        def VARIABLE(self):
            return self.getToken(prologParser.VARIABLE, 0)

        def UNOP(self):
            return self.getToken(prologParser.UNOP, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(prologParser.TermContext)
            else:
                return self.getTypedRuleContext(prologParser.TermContext,i)


        def BINOP(self):
            return self.getToken(prologParser.BINOP, 0)

        def LBRACK(self):
            return self.getToken(prologParser.LBRACK, 0)

        def termlist(self):
            return self.getTypedRuleContext(prologParser.TermlistContext,0)


        def RBRACK(self):
            return self.getToken(prologParser.RBRACK, 0)

        def getRuleIndex(self):
            return prologParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = prologParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_term, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 94
                self.atom()
                pass

            elif la_ == 2:
                self.state = 95
                self.functor()
                pass

            elif la_ == 3:
                self.state = 96
                self.match(prologParser.ATOM)
                self.state = 97
                self.match(prologParser.T__8)
                self.state = 98
                self.match(prologParser.NUMERAL)
                pass

            elif la_ == 4:
                self.state = 99
                self.match(prologParser.VARIABLE)
                pass

            elif la_ == 5:
                self.state = 100
                self.match(prologParser.UNOP)
                self.state = 101
                self.term(6)
                pass

            elif la_ == 6:
                self.state = 102
                self.match(prologParser.BINOP)
                self.state = 103
                self.match(prologParser.T__6)
                self.state = 104
                self.term(0)
                self.state = 105
                self.match(prologParser.T__3)
                self.state = 106
                self.term(0)
                self.state = 107
                self.match(prologParser.T__7)
                pass

            elif la_ == 7:
                self.state = 109
                self.match(prologParser.T__6)
                self.state = 110
                self.term(0)
                self.state = 111
                self.match(prologParser.T__7)
                pass

            elif la_ == 8:
                self.state = 113
                self.match(prologParser.LBRACK)
                self.state = 114
                self.termlist()
                self.state = 115
                self.match(prologParser.RBRACK)
                pass

            elif la_ == 9:
                self.state = 117
                self.match(prologParser.LBRACK)
                self.state = 118
                self.term(0)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==prologParser.T__3:
                    self.state = 119
                    self.match(prologParser.T__3)
                    self.state = 120
                    self.termlist()


                self.state = 123
                self.match(prologParser.T__9)
                self.state = 124
                self.match(prologParser.VARIABLE)
                self.state = 125
                self.match(prologParser.RBRACK)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = prologParser.TermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 129
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 130
                    self.match(prologParser.BINOP)
                    self.state = 131
                    self.term(6) 
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATOM(self):
            return self.getToken(prologParser.ATOM, 0)

        def NUMERAL(self):
            return self.getToken(prologParser.NUMERAL, 0)

        def STRING(self):
            return self.getToken(prologParser.STRING, 0)

        def getRuleIndex(self):
            return prologParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = prologParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << prologParser.ATOM) | (1 << prologParser.NUMERAL) | (1 << prologParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(prologParser.AtomContext,0)


        def termlist(self):
            return self.getTypedRuleContext(prologParser.TermlistContext,0)


        def getRuleIndex(self):
            return prologParser.RULE_functor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctor" ):
                listener.enterFunctor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctor" ):
                listener.exitFunctor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctor" ):
                return visitor.visitFunctor(self)
            else:
                return visitor.visitChildren(self)




    def functor(self):

        localctx = prologParser.FunctorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.atom()
            self.state = 140
            self.match(prologParser.T__6)
            self.state = 141
            self.termlist()
            self.state = 142
            self.match(prologParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


